# tuta

./: .env  bot_utils.py  data_info.py  data_viz.ipynb  db.py  main.py  pyproject.toml  requirements.txt  tuta.ipynb  utils.py
.streamlit/: config.toml
data/: alemania.pkl  austria.pkl  belgica.pkl  bosnia.pkl  brazil.pkl  bulgaria.pkl  chipre.pkl  croacia.pkl  dinamarca.pkl  escocia.pkl  españa.pkl  francia.pkl  gales.pkl  grecia.pkl  holanda.pkl  hungria.pkl  inglaterra.pkl  israel.pkl  italia.pkl  marruecos.pkl  polonia.pkl  portugal.pkl  r_checa.pkl  serbia.pkl  suiza.pkl  turquia.pkl  ucrania.pkl
